tests/vertical-slice/reject/match_predicate_guarded_tuple.hew
fn main() -> i64 {
    let value = (0, "a" + "x", "b" + "y");
    let _result = match value {
        (0, a, _) if false => a.len(),
        (_, _, _) => 2,
    };
    0
}
